--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "com.coffee.upm-git-extension": "https://e.coding.net/goldsprite/UnityProjects/UpmGitExtension_CodingFork.git",
+    "com.coffee.upm-git-extension": "https://github.com/mob-sakai/UpmGitExtension.git#2.1.1",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
